cleanup project setup

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,5 @@
 export NIXPKGS_ALLOW_UNFREE=1;
-export_alias kitchen "bundle exec kitchen";
+if [ "$(type -t export_alias)" == "function" ]; then
+  export_alias kitchen "bundle exec kitchen";
+fi
 use_nix
